[package]
name = "mintcash-reflect"
version = "0.1.0"
authors = ["Unorthodox Labs, LLC"]
edition = "2021"
description = "Reflect messages to use for test cases - based on cw-mask"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = "1.5"
cosmwasm-std = { version = "1.5", features = ["staking", "stargate"] }
cosmwasm-storage = "1.5"
mintcash-bindings = { version = "0.1.0", path = "../../packages/bindings" }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
